--- a/i/index.html
+++ b/i/index.html
@@ -151,6 +151,108 @@
             </div>
         </div>
     </div>
+    <div class="container mt-5">
+    <h1 class="titlebold text-center">International Holiday Destinations</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/paris');" onclick="location.href='/i/paris.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Paris</h5>
+                    <p class="destination-description">The city of love and lights.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/new_york');" onclick="location.href='/i/new_york.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">New York</h5>
+                    <p class="destination-description">The Big Apple, known for its skyline.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tokyo');" onclick="location.href='/i/tokyo.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Tokyo</h5>
+                    <p class="destination-description">A blend of tradition and innovation.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/london');" onclick="location.href='/i/london.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">London</h5>
+                    <p class="destination-description">Rich history and iconic landmarks.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/sydney');" onclick="location.href='/i/sydney.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Sydney</h5>
+                    <p class="destination-description">Famous for its opera house and harbor.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rome');" onclick="location.href='/i/rome.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Rome</h5>
+                    <p class="destination-description">The Eternal City with ancient history.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cape_town');" onclick="location.href='/i/cape_town.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Cape Town</h5>
+                    <p class="destination-description">Stunning landscapes and rich culture.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ibiza');" onclick="location.href='/i/ibiza.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Ibiza</h5>
+                    <p class="destination-description">Famous for its nightlife and beaches.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/bali');" onclick="location.href='/i/bali.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Bali</h5>
+                    <p class="destination-description">Tropical paradise with beautiful beaches.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/istanbul');" onclick="location.href='/i/istanbul.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Istanbul</h5>
+                    <p class="destination-description">Where East meets West, rich in history.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/santorini');" onclick="location.href='/i/santorini.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Santorini</h5>
+                    <p class="destination-description">Famous for its stunning sunsets and architecture.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/borabora');" onclick="location.href='/i/borabora.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Bora Bora</h5>
+                    <p class="destination-description">Idyllic island known for its turquoise waters.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
