--- a/i/index.html
+++ b/i/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/kerala');" onclick="location.href='i/d/kerala.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/kerala');" onclick="location.href='d/kerala.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Kerala</h5>
                         <p class="destination-description">Serene backwaters and lush greenery.</p>
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/goa');" onclick="location.href='i/d/goa.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/goa');" onclick="location.href='d/goa.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Goa</h5>
                         <p class="destination-description">Stunning beaches and vibrant nightlife.</p>
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rajasthan');" onclick="location.href='i/d/rajasthan.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rajasthan');" onclick="location.href='d/rajasthan.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Rajasthan</h5>
                         <p class="destination-description">Forts and rich cultural heritage.</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/himachal');" onclick="location.href='i/d/himachal_pradesh.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/himachal');" onclick="location.href='d/himachal_pradesh.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Himachal Pradesh</h5>
                         <p class="destination-description">A paradise for adventure lovers.</p>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ladakh');" onclick="location.href='i/d/leh_ladakh.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ladakh');" onclick="location.href='d/leh_ladakh.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Leh-Ladakh</h5>
                         <p class="destination-description">Breathtaking landscapes and monasteries.</p>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/andaman');" onclick="location.href='i/d/andaman_islands.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/andaman');" onclick="location.href='d/andaman_islands.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Andaman Islands</h5>
                         <p class="destination-description">Pristine beaches and coral reefs.</p>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/coorg');" onclick="location.href='i/d/mysore_coorg.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/coorg');" onclick="location.href='d/mysore_coorg.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Mysore and Coorg</h5>
                         <p class="destination-description">Royal heritage and coffee plantations.</p>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/odisha');" onclick="location.href='i/d/odisha.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/odisha');" onclick="location.href='d/odisha.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Odisha</h5>
                         <p class="destination-description">Ancient temples and beautiful beaches.</p>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/west_bengal');" onclick="location.href='i/d/west_bengal.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/west_bengal');" onclick="location.href='d/west_bengal.html'">
                     <div class="text-center">
                         <h5 class="destination-title">West Bengal</h5>
                         <p class="destination-description">Colonial architecture and tea gardens.</p>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tamil_nadu');" onclick="location.href='i/d/tamil_nadu.html'">
+                <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tamil_nadu');" onclick="location.href='d/tamil_nadu.html'">
                     <div class="text-center">
                         <h5 class="destination-title">Tamil Nadu</h5>
                         <p class="destination-description">Famous for its temples and beaches.</p>
@@ -155,7 +155,7 @@
     <h1 class="titlebold text-center">International Holiday Destinations</h1>
     <div class="row">
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/paris');" onclick="location.href='/i/paris.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/paris');" onclick="location.href='d/paris.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Paris</h5>
                     <p class="destination-description">The city of love and lights.</p>
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/new_york');" onclick="location.href='/i/new_york.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/new_york');" onclick="location.href='d/new_york.html'">
                 <div class="text-center">
                     <h5 class="destination-title">New York</h5>
                     <p class="destination-description">The Big Apple, known for its skyline.</p>
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tokyo');" onclick="location.href='/i/tokyo.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tokyo');" onclick="location.href='d/tokyo.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Tokyo</h5>
                     <p class="destination-description">A blend of tradition and innovation.</p>
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/london');" onclick="location.href='/i/london.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/london');" onclick="location.href='d/london.html'">
                 <div class="text-center">
                     <h5 class="destination-title">London</h5>
                     <p class="destination-description">Rich history and iconic landmarks.</p>
@@ -187,7 +187,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/sydney');" onclick="location.href='/i/sydney.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/sydney');" onclick="location.href='d/sydney.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Sydney</h5>
                     <p class="destination-description">Famous for its opera house and harbor.</p>
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rome');" onclick="location.href='/i/rome.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rome');" onclick="location.href='d/rome.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Rome</h5>
                     <p class="destination-description">The Eternal City with ancient history.</p>
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cape_town');" onclick="location.href='/i/cape_town.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cape_town');" onclick="location.href='d/cape_town.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Cape Town</h5>
                     <p class="destination-description">Stunning landscapes and rich culture.</p>
@@ -211,7 +211,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ibiza');" onclick="location.href='/i/ibiza.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ibiza');" onclick="location.href='d/ibiza.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Ibiza</h5>
                     <p class="destination-description">Famous for its nightlife and beaches.</p>
@@ -219,7 +219,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/bali');" onclick="location.href='/i/bali.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/bali');" onclick="location.href='d/bali.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Bali</h5>
                     <p class="destination-description">Tropical paradise with beautiful beaches.</p>
@@ -227,7 +227,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/istanbul');" onclick="location.href='/i/istanbul.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/istanbul');" onclick="location.href='d/istanbul.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Istanbul</h5>
                     <p class="destination-description">Where East meets West, rich in history.</p>
@@ -235,7 +235,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/santorini');" onclick="location.href='/i/santorini.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/santorini');" onclick="location.href='d/santorini.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Santorini</h5>
                     <p class="destination-description">Famous for its stunning sunsets and architecture.</p>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/borabora');" onclick="location.href='/i/borabora.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/borabora');" onclick="location.href='d/borabora.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Bora Bora</h5>
                     <p class="destination-description">Idyllic island known for its turquoise waters.</p>
