--- a/i/index.html
+++ b/i/index.html
@@ -155,7 +155,7 @@
     <h1 class="titlebold text-center">International Holiday Destinations</h1>
     <div class="row">
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/paris');" onclick="location.href='d/paris.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/paris');" onclick="location.href='/i/paris.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Paris</h5>
                     <p class="destination-description">The city of love and lights.</p>
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/new_york');" onclick="location.href='d/new_york.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/new_york');" onclick="location.href='/i/new_york.html'">
                 <div class="text-center">
                     <h5 class="destination-title">New York</h5>
                     <p class="destination-description">The Big Apple, known for its skyline.</p>
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tokyo');" onclick="location.href='d/tokyo.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/tokyo');" onclick="location.href='/i/tokyo.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Tokyo</h5>
                     <p class="destination-description">A blend of tradition and innovation.</p>
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/london');" onclick="location.href='d/london.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/london');" onclick="location.href='/i/london.html'">
                 <div class="text-center">
                     <h5 class="destination-title">London</h5>
                     <p class="destination-description">Rich history and iconic landmarks.</p>
@@ -187,7 +187,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/sydney');" onclick="location.href='d/sydney.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/sydney');" onclick="location.href='/i/sydney.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Sydney</h5>
                     <p class="destination-description">Famous for its opera house and harbor.</p>
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rome');" onclick="location.href='d/rome.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/rome');" onclick="location.href='/i/rome.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Rome</h5>
                     <p class="destination-description">The Eternal City with ancient history.</p>
@@ -203,7 +203,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cape_town');" onclick="location.href='d/cape_town.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cape_town');" onclick="location.href='/i/cape_town.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Cape Town</h5>
                     <p class="destination-description">Stunning landscapes and rich culture.</p>
@@ -211,7 +211,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ibiza');" onclick="location.href='d/ibiza.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/ibiza');" onclick="location.href='/i/ibiza.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Ibiza</h5>
                     <p class="destination-description">Famous for its nightlife and beaches.</p>
@@ -219,7 +219,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/bali');" onclick="location.href='d/bali.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/bali');" onclick="location.href='/i/bali.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Bali</h5>
                     <p class="destination-description">Tropical paradise with beautiful beaches.</p>
@@ -227,7 +227,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/istanbul');" onclick="location.href='d/istanbul.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/istanbul');" onclick="location.href='/i/istanbul.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Istanbul</h5>
                     <p class="destination-description">Where East meets West, rich in history.</p>
@@ -235,7 +235,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/santorini');" onclick="location.href='d/santorini.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/santorini');" onclick="location.href='/i/santorini.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Santorini</h5>
                     <p class="destination-description">Famous for its stunning sunsets and architecture.</p>
@@ -243,7 +243,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/borabora');" onclick="location.href='d/borabora.html'">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/borabora');" onclick="location.href='/i/borabora.html'">
                 <div class="text-center">
                     <h5 class="destination-title">Bora Bora</h5>
                     <p class="destination-description">Idyllic island known for its turquoise waters.</p>
@@ -252,6 +252,7 @@
         </div>
     </div>
 </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
