--- a/i/index.html
+++ b/i/index.html
@@ -151,6 +151,7 @@
             </div>
         </div>
     </div>
+    <--------------------------- internatinal destinations ---------------------------!>
     <div class="container mt-5">
     <h1 class="titlebold text-center">International Holiday Destinations</h1>
     <div class="row">
@@ -250,8 +251,97 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/amalfi');" onclick="location.href='/i/amalfi.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Amalfi Coast</h5>
+                    <p class="destination-description">Famous for its stunning coastal scenery.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/machu_picchu');" onclick="location.href='/i/machu_picchu.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Machu Picchu</h5>
+                    <p class="destination-description">Incan city set high in the Andes Mountains.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/cancun');" onclick="location.href='/i/cancun.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Cancun</h5>
+                    <p class="destination-description">Known for its beautiful beaches and nightlife.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/berlin');" onclick="location.href='/i/berlin.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Berlin</h5>
+                    <p class="destination-description">A city rich in history and culture.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/singapore');" onclick="location.href='/i/singapore.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Singapore</h5>
+                    <p class="destination-description">A global financial hub with a tropical climate.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/dubai');" onclick="location.href='/i/dubai.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Dubai</h5>
+                    <p class="destination-description">Famous for luxury shopping and ultramodern architecture.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/stockholm');" onclick="location.href='/i/stockholm.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Stockholm</h5>
+                    <p class="destination-description">The capital of Sweden, built on 14 islands.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/athens');" onclick="location.href='/i/athens.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Athens</h5>
+                    <p class="destination-description">Home to ancient ruins and a vibrant city life.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/barcelona');" onclick="location.href='/i/barcelona.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Barcelona</h5>
+                    <p class="destination-description">Known for its art and architecture.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/miami');" onclick="location.href='/i/miami.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Miami</h5>
+                    <p class="destination-description">Famous for its beaches and vibrant nightlife.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/los_angeles');" onclick="location.href='/i/los_angeles.html'">
+                <div class="text-center">
+                    <h5 class="destination-title">Los Angeles</h5>
+                    <p class="destination-description">The heart of the film and entertainment industry.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
 
 
 
