--- a/i/index.html
+++ b/i/index.html
@@ -151,7 +151,7 @@
             </div>
         </div>
     </div>
-    <--------------------------- internatinal destinations ---------------------------!>
+    <!--------------------------- internatinal destinations --------------------------->
     <div class="container mt-5">
     <h1 class="titlebold text-center">International Holiday Destinations</h1>
     <div class="row">
