--- a/index.html
+++ b/index.html
@@ -756,26 +756,20 @@ h1, h2, h3 { font-family: 'Lora', serif; }
     <!-- Footer Section -->
     <footer class="footer text-center">
         <div class="container">
-            <ul class="footer-links">
-                <li><a href="#homeResorts">Our Home Resorts</a></li>
-                <li><a href="#ourExchange">Our Exchange</a></li>
-                <li><a href="#partners">Partners</a></li>
-                <li><a href="#terms">Terms and Conditions</a></li>
-                <li><a href="#howToBook">How to Book Your Holiday</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-            </ul>
-            <p class="mb-0 mt-3">Website created by Holiday Consultant Aayush Aghav.</p>
+    
+            <p class="mb-0 mt-3">© 1994-2024 myslides.github.io </p>
         </div>
     </footer>
 
     <!-- Bootstrap 5 JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-
-    <!-- jQuery (needed for Jiffy Slider) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- Jiffy Slider JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jiffy-slider/1.1.1/jiffy-slider.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+   
+    
     <script>
         $(document).ready(function() {
             $('.jiffy-slider').jiffySlider();
