--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@ h1, h2, h3 { font-family: 'Lora', serif; }
             <h2 class="text-center mb-5">Explore Our Properties</h2>
             <p class="text-center">We offer a variety of properties, including:</p>
             <ul class="list-group">
+                <li class="list-group-item">🏨 3*-4*-5*</li>
                 <li class="list-group-item">🏝️ Resorts</li>
                 <li class="list-group-item">🏡 Villas</li>
                 <li class="list-group-item">🏖️ Bungalows</li>
-                <li class="list-group-item">🚢 Cruises</li>
                 <li class="list-group-item">🌲 Tree Houses</li>
                 <li class="list-group-item">🏠 Houseboats</li>
+                <li class="list-group-item">🚢 Cruises(extra)</li>
             </ul>
             <p class="text-center mt-4">With 4,500 brands affiliated globally, your holiday experience is guaranteed!</p>
         </div>
