--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@ h1, h2, h3 { font-family: 'Lora', serif; }
                     <li class="nav-item">
                         <a class="nav-link" href="#myMembers">My Members</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Us</a>
-                    </li>
+                  
                 </ul>
             </div>
         </div>
@@ -144,7 +142,7 @@ h1, h2, h3 { font-family: 'Lora', serif; }
                 <li>Gift your holiday to family or friends for special occasions.</li>
                 <li>Sell your week for any amount you choose.</li>
                 <li>Transfer your ownership to family or friends.</li>
-                <li>Exchange your week for a fee ranging from ₹169 to ₹359, depending on the location.</li>
+                <li>Exchange your week for a fee ranging from $169 to $359, depending on the location.</li>
             </ol>
         </div>
     </div>
@@ -155,7 +153,6 @@ h1, h2, h3 { font-family: 'Lora', serif; }
 
 <div class="table_component" role="region" tabindex="0">
 <table class="table"> <!-- Only default Bootstrap table class applied -->
-    <caption>Your Way vs Our Way</caption> <!-- Caption updated -->
     <thead>
         <tr>
             <th>Your Way</th>
