--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1, h2, h3 { font-family: 'Lora', serif; }
 .card img { border-radius: 15px 15px 0 0; width: 100%; height: 70%; object-fit: cover; }
 .card-body { padding: 15px; height: 30%; }
 .card-info { text-align: center; padding: 10px; }
-.name { font-style: italic; font-size: 1.2rem; }
+-name { font-style: italic; font-size: 1.2rem; }
 @media (min-width: 768px) { .card { flex-direction: column; height: 300px; } }
 @media (max-width: 767.98px) { .row { flex-direction: column; } }
 
