--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1, h2, h3 { font-family: 'Lora', serif; }
 .footer .footer-links a:hover { text-decoration: underline; }
 .highlight { background-color: #007bff; color: white; font-weight: bold; }
 .comparison-table { margin: 20px auto; }
-.card { margin: 15px; transition: transform 0.2s, box-shadow 0.2s; text-decoration: none; color: inherit; border: none; border-radius: 15px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); height: 300px; }
+.card { margin: 15px; transition: transform 0.2s, box-shadow 0.2s; text-decoration: none; color: inherit; border: none; border-radius: 15px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); height: 300px;font-size:13px;}
 .card:hover { transform: translateY(-5px); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25); }
 .card img { border-radius: 15px 15px 0 0; width: 100%; height: 70%; object-fit: cover; }
 .card-body { padding: 15px; height: 30%; }
