--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@ h1, h2, h3 { font-family: 'Lora', serif; }
 .footer .footer-links a:hover { text-decoration: underline; }
 .highlight { background-color: #007bff; color: white; font-weight: bold; }
 .comparison-table { margin: 20px auto; }
-.card { margin: 15px; transition: transform 0.2s, box-shadow 0.2s; text-decoration: none; color: inherit; border: none; border-radius: 15px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); height: 300px;font-size:13px;}
+.card { margin: 15px; transition: transform 0.2s, box-shadow 0.2s; text-decoration: none; color: inherit; border: none; border-radius: 15px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); height: 300px;}
 .card:hover { transform: translateY(-5px); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25); }
 .card img { border-radius: 15px 15px 0 0; width: 100%; height: 70%; object-fit: cover; }
 .card-body { padding: 15px; height: 30%; }
 .card-info { text-align: center; padding: 10px; }
 .name { font-style: italic; font-size: 15px; }
+.card p {font-size:13px;}
+
 @media (min-width: 768px) { .card { flex-direction: column; height: 300px; } }
 @media (max-width: 767.98px) { .row { flex-direction: column; } }
 
