--- a/index.html
+++ b/index.html
@@ -12,46 +12,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <style>
-body { font-family: 'Poppins', sans-serif; }
-footer{background-color:#bababa}
-footer .text-dark{color:#000}
-footer .text-dark:hover{text-decoration:underline}
-footer .list-unstyled{padding:0}
-footer .list-unstyled li{display:inline;margin-right:15px}
-h1, h2, h3 { font-family: 'Lora', serif; }
-.hero { position: relative; height: 600px; color: white; text-align: center; overflow: hidden; }
-.hero .jiffy-slider { position: absolute; width: 100%; height: 100%; top: 0; left: 0; overflow: hidden; }
-.hero .jiffy-slider img { width: 100%; height: 100%; object-fit: cover; }
-.hero h1, .hero p { position: relative; z-index: 2; }
-.hero h1 { font-size: 3rem; }
-.feature-icon { font-size: 50px; color: #007bff; }
-.section { padding: 60px 0; }
-.footer { background-color: #007bff; color: white; padding: 40px 0; position: relative; }
-.footer .footer-links { display: flex; justify-content: center; flex-wrap: wrap; list-style: none; padding: 0; }
-.footer .footer-links li { margin: 0 15px; }
-.footer .footer-links a { color: white; text-decoration: none; }
-.footer .footer-links a:hover { text-decoration: underline; }
-.highlight { background-color: #007bff; color: white; font-weight: bold; }
-.comparison-table { margin: 20px auto; }
-.card { margin: 15px; transition: transform 0.2s, box-shadow 0.2s; text-decoration: none; color: inherit; border: none; border-radius: 15px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); height: 300px;}
-.card:hover { transform: translateY(-5px); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.25); }
-.card img { border-radius: 15px 15px 0 0; width: 100%; height: 70%; object-fit: cover; }
-.card-body { padding: 15px; height: 30%; }
-.card-info { text-align: center; padding: 10px; }
-.name { font-style: italic; font-size: 15px; }
-.card p {font-size:13px;}
-
-@media (min-width: 768px) { .card { flex-direction: column; height: 300px; } }
-@media (max-width: 767.98px) { .row { flex-direction: column; } }
-
-    </style>
+    <link href="css/styleone.css" rel="stylesheet">
+    
+ 
   <script>
         function loadHTML() {
             const files = [
-                { url: 'https://myslides.github.io/mem.html', id: 'memslide' },
-                { url: '', id: 'beforefooter' },
-                { url: '', id: 'contactus' }
+                { url: 'https://myslides.github.io/i/mem.html', id: 'memslide' },
+                { url: 'https://myslides.github.io/i/hero.html', id: 'myhero' },
+                { url: 'https://myslides.github.io/i/feaofow.html', id: 'features' }
             ];
             
             files.forEach(file => {
@@ -100,19 +69,7 @@ h1, h2, h3 { font-family: 'Lora', serif; }
     </nav>
 
     <!-- Hero Section with Jiffy Slider -->
-    <div class="hero" style="margin-top: 56px;">
-        <div class="jiffy-slider">
-            <img src="https://picsum.photos/1200/600?random=1" alt="Popular Destination 1">
-            <img src="https://picsum.photos/1200/600?random=2" alt="Popular Destination 2">
-            <img src="https://picsum.photos/1200/600?random=3" alt="Popular Destination 3">
-            <img src="https://picsum.photos/1200/600?random=4" alt="Popular Destination 4">
-        </div>
-        <div class="container">
-            <h1>Your Dream Holiday Awaits</h1>
-            <p>Travel every year for 6 nights and 7 days at our luxurious properties worldwide!</p>
-        </div>
-    </div>
-
+  
     <!-- Features Section -->
     <div id="features" class="section">
         <div class="container">
