--- a/index.html
+++ b/index.html
@@ -69,118 +69,9 @@
     </nav>
 
     <!-- Hero Section with Jiffy Slider -->
-  
-    <!-- Features Section -->
-    <div id="features" class="section">
-        <div class="container">
-            <h2 class="text-center mb-5">Features of Holiday Ownership</h2>
-            <div class="row">
-                <div class="col-md-4 text-center mb-4">
-                    <div class="feature-icon">🏨</div>
-                    <h3>Luxury Properties</h3>
-                    <p>Choose from 3 to 5-star resorts, villas, bungalows, and more in 110 countries.</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <div class="feature-icon">👨‍👩‍👧‍👦</div>
-                    <h3>Travel with Loved Ones</h3>
-                    <p>Enjoy unforgettable holidays with family, friends, and relatives.</p>
-                </div>
-                <div class="col-md-4 text-center mb-4">
-                    <div class="feature-icon">🚍</div>
-                    <h3>Transportation Discounts</h3>
-                    <p>Get discounts on flights, buses, and trains for your travel convenience.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Properties Section -->
-    <div id="properties" class="section bg-light">
-        <div class="container">
-            <h2 class="text-center mb-5">Explore Our Properties</h2>
-            <p class="text-center">We offer a variety of properties, including:</p>
-            <ul class="list-group">
-                <li class="list-group-item">🏨 3*-4*-5*</li>
-                <li class="list-group-item">🏝️ Resorts</li>
-                <li class="list-group-item">🏡 Villas</li>
-                <li class="list-group-item">🏖️ Bungalows</li>
-                <li class="list-group-item">🌲 Tree Houses</li>
-                <li class="list-group-item">🏠 Houseboats</li>
-                <li class="list-group-item">🚢 Cruises(extra)</li>
-            </ul>
-            <p class="text-center mt-4">With 4,500 brands affiliated globally, your holiday experience is guaranteed!</p>
-        </div>
-    </div>
-
-    <!-- Utilization Section -->
-    <div id="utilization" class="section">
-        <div class="container">
-            <h2 class="text-center mb-5">Utilization of Your Ownership</h2>
-            <ol>
-                <li>You can save your week for next year if you can't travel.</li>
-                <li>Borrow from next year to extend your holidays up to 21 days.</li>
-                <li>Split your holidays into different segments (4 nights, 5 days, etc.).</li>
-                <li>Gift your holiday to family or friends for special occasions.</li>
-                <li>Sell your week for any amount you choose.</li>
-                <li>Transfer your ownership to family or friends.</li>
-                <li>Exchange your week for a fee ranging from $169 to $359, depending on the location.</li>
-            </ol>
-        </div>
-    </div>
-
-    <!-- Comparison Section -->
-<!-- Bootstrap CDN for CSS -->
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-
-<div class="table_component" role="region" tabindex="0">
-<table class="table"> <!-- Only default Bootstrap table class applied -->
-    <thead>
-        <tr>
-            <th>Your Way</th>
-            <th>Our Way</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>UK 35<br>GA 40<br>HP 45<br>AN 50<br>IN 120<br>IN 120<br>Total 2,90,000/-</td>
-            <td>UK free<br>GA free&nbsp;<br>HP free<br>AN free<br>IN 169$-359$<br>IN 169$-359$<br>Total 60,000/-
-            </td>
-        </tr>
-        <tr>
-            <td>6 % to 8 % inflation&nbsp;</td>
-            <td>0 % inflation&nbsp;</td>
-        </tr>
-        <tr>
-            <td>Standard property&nbsp;</td>
-            <td>Luxury Property&nbsp;</td>
-        </tr>
-        <tr>
-            <td>India</td>
-            <td>India + International&nbsp;</td>
-        </tr>
-        <tr>
-            <td>2 Adults&nbsp;</td>
-            <td>Family Friends Relatives&nbsp;</td>
-        </tr>
-        <tr>
-            <td>Normal Photos&nbsp;<br>Normal Videos<br>Normal Memories&nbsp;</td>
-            <td>📸Better Photos<br>🎥Better Videos<br>🛀Better Memories&nbsp;</td>
-        </tr>
-        <tr>
-            <td>Total 4,10,000/- for 6 Holidays&nbsp;</td>
-            <td>4,10,000/- for 25 Holidays&nbsp;</td>
-        </tr>
-    </tbody>
-</table>
-</div>
-
-    <!-- My Members Section -->
-<div id="myMembers" class="section">
-<div class="container mt-5">
-    <h2 class="text-center mb-4">My Members </h2>
-    <div id="testimonialCarousel" class="carousel slide" data-ride="carousel" data-interval="5000" role="region">
-        <div class="carousel-inner">
-            <!-- Testimonial -->
+    <div id="myhero"></div>
+    <div id="house"></div>
+    <div id="theway"></div>
     <div id="memslide"></div>
     
     <!-- Footer Section -->
@@ -222,3 +113,4 @@
     </script>
 </body>
 </html>
+
