--- a/i/app3.html
+++ b/i/app3.html
@@ -78,6 +78,21 @@
         </div>
         <p class="text-center">With 4,500 brands affiliated globally, your holiday experience is guaranteed!</p>
     </div>
+<!-- Utilization Section -->
+    <div id="utilization" class="section">
+        <div class="container">
+            <h2 class="text-center mb-5">Utilization of Your Ownership</h2>
+            <ol>
+                <li>You can save your week for next year if you can't travel.</li>
+                <li>Borrow from next year to extend your holidays up to 21 days.</li>
+                <li>Split your holidays into different segments (4 nights, 5 days, etc.).</li>
+                <li>Gift your holiday to family or friends for special occasions.</li>
+                <li>Sell your week for any amount you choose.</li>
+                <li>Transfer your ownership to family or friends.</li>
+                <li>Exchange your week for a fee ranging from $169 to $359, depending on the location.</li>
+            </ol>
+        </div>
+    </div>
 
     
     
