--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Lora:wght@700&display=swap" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/styleone.css" rel="stylesheet">
+    <link href="https://myslides.github.io/css/styleone.css" rel="stylesheet">
     
  
   <script>
