--- a/i/app3.html
+++ b/i/app3.html
@@ -1,89 +1,28 @@
-
-    <style>
-        .Properties {
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .Properties:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-        }
-    </style>
-    <div class="container mt-5">
-        <h1 class="text-center">Explore Our Properties</h1>
-        <p class="text-center">We offer a variety of properties, including:</p>
-        <div class="row">
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="3*-4*-5*">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">3*-4*-5*</h5>
-                        <p class="card-text">Experience luxury accommodations tailored to your needs.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Resorts">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Resorts</h5>
-                        <p class="card-text">Relax in top-rated resorts with exclusive amenities.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Villas">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Villas</h5>
-                        <p class="card-text">Enjoy a private escape with stunning views and comfort.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Tree Houses">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Tree Houses</h5>
-                        <p class="card-text">Unique stays amidst nature for a memorable experience.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Houseboats">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Houseboats</h5>
-                        <p class="card-text">Float away on a luxurious houseboat.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 mb-4">
-                <div class="card Properties">
-                    <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="Cruises">
-                    <div class="card-body text-center">
-                        <h5 class="card-title">Cruises (Extra)</h5>
-                        <p class="card-text">Explore the seas with our exclusive cruise packages.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <p class="text-center">With 4,500 brands affiliated globally, your holiday experience is guaranteed!</p>
+<style>.Properties{transition:transform 0.3s,box-shadow 0.3s;}.Properties:hover{transform:scale(1.05);box-shadow:0 4px 20px rgba(0,0,0,0.2);}</style>
+<div class="container mt-5">
+    <h1 class="text-center">Explore Our Properties</h1>
+    <p class="text-center">We offer a variety of properties, including:</p>
+    <div class="row">
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image1.jpg" class="card-img-top" alt="3*-4*-5*"><div class="card-body text-center"><h5 class="card-title">3*-4*-5*</h5><p class="card-text">Experience luxury accommodations tailored to your needs.</p></div></div></div>
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image2.jpg" class="card-img-top" alt="Resorts"><div class="card-body text-center"><h5 class="card-title">Resorts</h5><p class="card-text">Relax in top-rated resorts with exclusive amenities.</p></div></div></div>
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image3.jpg" class="card-img-top" alt="Villas"><div class="card-body text-center"><h5 class="card-title">Villas</h5><p class="card-text">Enjoy a private escape with stunning views and comfort.</p></div></div></div>
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image4.jpg" class="card-img-top" alt="Tree Houses"><div class="card-body text-center"><h5 class="card-title">Tree Houses</h5><p class="card-text">Unique stays amidst nature for a memorable experience.</p></div></div></div>
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image5.jpg" class="card-img-top" alt="Houseboats"><div class="card-body text-center"><h5 class="card-title">Houseboats</h5><p class="card-text">Float away on a luxurious houseboat.</p></div></div></div>
+        <div class="col-md-4 mb-4"><div class="card Properties"><img src="https://example.com/image6.jpg" class="card-img-top" alt="Cruises"><div class="card-body text-center"><h5 class="card-title">Cruises (Extra)</h5><p class="card-text">Explore the seas with our exclusive cruise packages.</p></div></div></div>
     </div>
-<!-- Utilization Section -->
-    <div id="utilization" class="section">
-        <div class="container">
-            <h2 class="text-center mb-5">Utilization of Your Ownership</h2>
-            <ol>
-                <li>You can save your week for next year if you can't travel.</li>
-                <li>Borrow from next year to extend your holidays up to 21 days.</li>
-                <li>Split your holidays into different segments (4 nights, 5 days, etc.).</li>
-                <li>Gift your holiday to family or friends for special occasions.</li>
-                <li>Sell your week for any amount you choose.</li>
-                <li>Transfer your ownership to family or friends.</li>
-                <li>Exchange your week for a fee ranging from $169 to $359, depending on the location.</li>
-            </ol>
-        </div>
+    <p class="text-center">With 4,500 brands affiliated globally, your holiday experience is guaranteed!</p>
+</div>
+<div id="utilization" class="section">
+    <div class="container">
+        <h2 class="text-center mb-5">Utilization of Your Ownership</h2>
+        <ol>
+            <li>You can save your week for next year if you can't travel.</li>
+            <li>Borrow from next year to extend your holidays up to 21 days.</li>
+            <li>Split your holidays into different segments (4 nights, 5 days, etc.).</li>
+            <li>Gift your holiday to family or friends for special occasions.</li>
+            <li>Sell your week for any amount you choose.</li>
+            <li>Transfer your ownership to family or friends.</li>
+            <li>Exchange your week for a fee ranging from $169 to $359, depending on the location.</li>
+        </ol>
     </div>
-
-    
-    
+</div>
