--- a/404.html
+++ b/404.html
@@ -66,7 +66,7 @@
 	</style>
 </head>
 <body>
-	<div class="center-text">Welcome to Antarctica</div> <!-- Centered Text -->
+	<div class="center-text">You Are Lost <br>Antarctica</div> <!-- Centered Text -->
 
 	<!-- mopvup-7nubfi-rUjveq -->
 	<button class="home-button" onclick="window.location.href='/'">Home</button>
