--- a/i/app1.1.html
+++ b/i/app1.1.html
@@ -1,6 +1,3 @@
-<html>
-<head>
-<title>Your slider in a simple web page</title>
 
 <style>
 body { background-color: #fff; color: #000; padding: 0; margin: 0; }
@@ -8,11 +5,10 @@ body { background-color: #fff; color: #000; padding: 0; margin: 0; }
 .container .ism-slider { margin-left: auto; margin-right: auto; }
 </style>
 
-<link rel="stylesheet" href="ism/css/my-slider.css"/>
-<script src="ism/js/ism-2.2.min.js"></script>
+<link rel="stylesheet" href="/css/my-slider.css"/>
+<script src="/js/ism-2.2.min.js"></script>
 
-</head>
-<body>
+
 <div class='container'>
 
 <div class="ism-slider" data-radio_type="thumbnail" id="continents">
@@ -43,18 +39,3 @@ body { background-color: #fff; color: #000; padding: 0; margin: 0; }
     </li>
   </ol>
 </div>
-<p class="ism-badge" id="continents-ism-badge"><a class="ism-link" href="http://imageslidermaker.com" rel="nofollow">generated with ISM</a></p>
-
-<section><h1>Your slider in a simple web page</h1>
-
-
-<p>This is a working example of your slider.</p>
-
-<p>To get your slider working in your web page add <em>my-slider.css</em>, <em>ism-2.2.min.js</em> and the slide images to your project directory and paste the markup into your HTML.</p>
-<p>Please see README.txt for more detailed instructions.</p>
-
-<p>* If your slider is not displayed correctly, please first make sure you have fully extracted the contents of the zip file.</p>
-
-</section></div>
-</body>
-</html>
